ADD node status check
